--- a/.htaccess
+++ b/.htaccess
@@ -4,7 +4,7 @@
 # RewriteRule ^(.+)$ route.php?ur=$1[QSA,L]
 
 RewriteEngine on
-RewriteCond %{REQUEST_FILENAME} !-d
+# RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_URI} !\.(js|css|png|jpg|gif)$ [NC]
 RewriteRule ^(.+)$ route.php?ur=$1 [QSA,L]
